# paris-flask-with-test

./: Dockerfile  README.md  conftest.py  db.json  db_load.py  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yaml
config/: settings.py
router/: home.py  todo.py  user.py
service/: todo_service.py
sql-basic/: README.md  docker-compose.yml  main.py  queries.sql  run_all.sql  sample_data.sql  schema.sql
tests/: data.py  test_app.py  test_todos.py
