[project]
name = "flask-paris-with-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.2.1",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "requests>=2.32.3",
]
